--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#F44336</color>
+    <color name="gray">#A19E9E</color>
+    <color name="dark_gray">#FF4E4848</color>
 </resources>
