--- a/app/src/main/res/layout/activity_alert_info.xml
+++ b/app/src/main/res/layout/activity_alert_info.xml
@@ -45,46 +45,67 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/alert_keyword"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@+id/cl_top_appbar">
-        <TextView
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_alert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="활동 알림"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="60dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
+            app:layout_constraintEnd_toStartOf="@+id/keyword_alert"
+            app:layout_constraintStart_toStartOf="@id/alert_keyword"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="15dp"
+                android:text="활동 알림"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/line_black"
+                android:layout_width="200dp"
+                android:layout_height="3dp"
+                android:background="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="키워드 알림"
-            android:textSize="18dp"
-            android:textStyle="bold"
-            android:textColor="@color/gray"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="60dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <View
-            android:id="@+id/line_black"
-            android:layout_width="200dp"
-            android:layout_height="3dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/black"/>
-        <View
-            android:id="@+id/line_gray"
-            android:layout_width="200dp"
-            android:layout_height="3dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/gray"/>
+            android:layout_height="50dp"
+            android:id="@+id/keyword_alert"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/alert_keyword"
+            app:layout_constraintStart_toEndOf="@+id/activity_alert">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="키워드 알림"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="@color/gray"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="60dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <View
+                android:id="@+id/line_gray"
+                android:layout_width="200dp"
+                android:layout_height="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@color/gray"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
