--- a/app/src/main/res/layout/activity_stuff_info.xml
+++ b/app/src/main/res/layout/activity_stuff_info.xml
@@ -1,167 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/appbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@null">
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:src="@drawable/iv_back_button"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ScrollView
+        app:layout_constraintTop_toBottomOf="@id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/user_interface"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/iv_computer"
-                android:layout_width="match_parent"
-                android:layout_height="320dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/example_computer" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/computer_layout"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
                 <ImageView
+                    android:id="@+id/iv_computer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_height="320dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/white_bar" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/example_computer" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/user_profile"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                app:layout_constraintEnd_toStartOf="@+id/user_manner_degree"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/computer_layout">
+
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@id/iv_profile"
+                    app:layout_constraintTop_toTopOf="@+id/user_profile"
+                    android:layout_marginStart="13dp"
+                    android:text="장형준"
+                    android:textSize="18dp" />
                 <ImageView
-                    android:id="@+id/back_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/iv_profile"
+                    android:layout_width="56dp"
+                    android:layout_height="59dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:src="@drawable/ic_window_close_outline_18"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="10dp"/>
+                    app:layout_constraintTop_toTopOf="@+id/user_profile"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:srcCompat="@drawable/icon_best_s" />
+                <TextView
+                    android:id="@+id/tv_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="8dp"
+                    android:text="화양동"
+                    android:textSize="17dp"
+                    app:layout_constraintStart_toEndOf="@+id/iv_profile"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/iv_computer_user"
-                android:layout_width="56dp"
-                android:layout_height="59dp"
-                android:layout_marginStart="25dp"
-                android:layout_marginTop="25dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_computer"
-                app:srcCompat="@drawable/icon_best_s" />
-
-            <TextView
-                android:id="@+id/tv_user"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/user_manner_degree"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="92dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="20dp"
-                android:text="장형준"
-                android:textSize="18dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_location"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/iv_computer"
-                app:layout_constraintTop_toBottomOf="@+id/iv_computer"
-                app:layout_constraintVertical_bias="1.0" />
+                android:padding="15dp"
+                app:layout_constraintEnd_toEndOf="@id/computer_layout"
+                app:layout_constraintStart_toEndOf="@id/user_profile"
+                app:layout_constraintTop_toBottomOf="@+id/computer_layout">
+                <ImageView
+                    android:id="@+id/user_manner_face"
+                    android:layout_width="44dp"
+                    android:layout_height="45dp"
+                    android:layout_marginEnd="14dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:srcCompat="@drawable/face_3" />
+                <TextView
+                    android:id="@+id/celcius_degree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="40.0`C"
+                    android:textColor="@color/orange"
+                    app:layout_constraintBottom_toTopOf="@+id/celcius_graph"
+                    app:layout_constraintEnd_toStartOf="@+id/user_manner_face"
+                    android:layout_marginEnd="14dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="18dp" />
 
-            <TextView
-                android:id="@+id/tv_location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="10dp"
-                android:text="화양동"
-                android:textSize="17dp"
-                app:layout_constraintStart_toEndOf="@+id/iv_computer_user"
-                app:layout_constraintTop_toBottomOf="@+id/tv_user" />
+
+                <ImageView
+                    android:id="@+id/celcius_graph"
+                    android:layout_width="80dp"
+                    android:layout_height="15dp"
+                    app:layout_constraintEnd_toStartOf="@+id/user_manner_face"
+                    app:layout_constraintTop_toBottomOf="@+id/celcius_degree"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:srcCompat="@drawable/article_status_closed" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <View
                 android:id="@+id/line"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
-                android:layout_marginTop="20dp"
                 android:background="@color/gray"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_computer_user" />
+                app:layout_constraintTop_toBottomOf="@+id/user_profile"/>
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="44dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="18dp"
-                android:layout_marginBottom="33dp"
-                app:layout_constraintBottom_toTopOf="@+id/line"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/iv_computer"
-                app:srcCompat="@drawable/face_3" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="270dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="70dp"
-                android:text="매너온도"
-                android:textColor="#807777"
-                android:textSize="17dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-            <ImageView
-                android:id="@+id/imageView5"
-                android:layout_width="85dp"
-                android:layout_height="15dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="2dp"
-                app:layout_constraintBottom_toTopOf="@+id/textView5"
-                app:layout_constraintEnd_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toBottomOf="@+id/textView6"
-                app:srcCompat="@drawable/article_status_closed" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="19dp"
-                android:layout_marginBottom="6dp"
-                android:text="40.0`C"
-                android:textColor="@color/orange"
-                android:textSize="18dp"
-                app:layout_constraintBottom_toTopOf="@+id/imageView5"
-                app:layout_constraintEnd_toStartOf="@+id/imageView4"
-                app:layout_constraintTop_toBottomOf="@+id/iv_computer" />
-
-            <TextView
-                android:id="@+id/textView16"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="12dp"
-                android:text="[풀옵션으로 구동 가능합니다.](cpu: i9-13900K)\n\n 그래픽카드: RTX 4090TI\n 램: 삼성 DDR% 32GB\n 메인보드: 프라임 b365M-k \n ssd: sk hynix p361 2TB\n 파워: 700W 정격\n 거의 새거나 다름 없습니다. 웬만한 게임\n 풀옵션으로 구동 가능합니다."
-                android:textSize="20dp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:padding="15dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/line" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/line">
+
+                <TextView
+                    android:id="@+id/tv_information"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="[풀옵션으로 구동 가능합니다.](cpu: i9-13900K)\n\n 그래픽카드: RTX 4090TI\n 램: 삼성 DDR% 32GB\n 메인보드: 프라임 b365M-k \n ssd: sk hynix p361 2TB\n 파워: 700W 정격\n 거의 새거나 다름 없습니다. 웬만한 게임\n 풀옵션으로 구동 가능합니다."
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/tv_information_plus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_information"
+                    android:text="[풀옵션으로 구동 가능합니다.](cpu: i9-13900K)\n\n 그래픽카드: RTX 4090TI\n 램: 삼성 DDR% 32GB\n 메인보드: 프라임 b365M-k \n ssd: sk hynix p361 2TB\n 파워: 700W 정격\n 거의 새거나 다름 없습니다. 웬만한 게임\n 풀옵션으로 구동 가능합니다."
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</ScrollView>
+    </ScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
